[package]
name = "banner_cycle"
version = "0.1.0"
authors = ["Vladislav Karnaukhov <koshel171@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "=2.0.0"}
actix-cors = "0.2.0"
actix-rt = "=1.1.1"
actix = "*"
derive_more = "0.99.9"
log = "0.4.11"
tera = "*"
csv ="*"
dotenv = "*"
env_logger = "*"
futures = "*"
rand = "*"